# alpha-new

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  gemini.md  mypy.ini  package-lock.json  pyproject.toml  run_alpha_tools.bat  test_graceful_exit.py
.github/workflows/: ci.yml
config/: airdrop_config.toml  airdrop_config_template.yaml  app.toml  auto_trader_config.toml  logging_config.toml  mobile_users_template.json  pc_users_template.json  proxies.txt
docs/: ALPHA_TOKEN_MODULE.md  API_LOGGING_IMPROVEMENT.md  API_REFERENCE_MERGED.md  API_REQUESTS_REFERENCE.md  AUTO_TRADER_IMPROVEMENTS.md  DEVELOPMENT.md  LOGGING_GUIDE.md  LOGGING_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUGGESTIONS.md  PROJECT_ARCHITECTURE_ANALYSIS.md  QUICK_START_GUIDE.md  USER_CONFIG_GUIDE.md  airdrop.md  codebase_cleanup_report.md  pyproject_optimization.md  ruff_configuration.md  strategy_system_flow.md
migrations/: env.py
scripts/: clean_pycache.py  validate_config.py
src/: __init__.py
src/alpha_new/: __init__.py  cli.py  main.py
src/alpha_new/api/: __init__.py  airdrop.py  alpha_api.py  http_client.py  limit_order.py  market_order.py  order_history.py  score.py  user.py  utils.py  wallet.py  ws_client.py  ws_order.py  ws_price.py
src/alpha_new/api_clients/: __init__.py  airdrop_client.py  alpha_token_client.py  base_ws_client.py  lmt_order_client.py  mkt_order_client.py  order_ws_client.py  price_ws_client.py  user_client.py  ws_monitor.py
src/alpha_new/db/: models.py  ops.py
src/alpha_new/models/: __init__.py  airdrop_model.py  alpha_token_model.py  user_model.py  ws_w3w_model.py
src/alpha_new/scripts/: auto_claim_airdrop.py  auto_trader.py  export_token_info.py  get_order_history_stats.py  init_db.py  log_manager.py  network_latency_test.py  query_airdrop_list.py  query_token_orders.py  semi_auto_claim_airdrop.py  skiplist_auto_claim_airdrop.py  test_user_id_logging.py  update_user_info.py
src/alpha_new/services/: __init__.py  airdrop_service.py  alpha_token_service.py  trade_service.py  user_service.py
src/alpha_new/utils/: __init__.py  async_optimizer.py  async_proxy_pool.py  common.py  config.py  database.py  error_handler.py  exceptions.py  http_pool.py  logger.py  logging_config.py  network_optimizer.py  time_helpers.py  user_session_manager.py  users_session_utils.py  websocket.py  websocket_manager.py
src/examples/: README.md  __init__.py  alpha_token_example.py  alpha_trading_example.py  quick_start_trading.py  trading_config_example.json
tests/: conftest.py  test_main.py  test_models.py
