[tool.black]
line-length = 88
target-version = ['py313']
include = '\\.pyi?$'
exclude = '/(\\.git|\\.venv|\\.mypy_cache|\\.pytest_cache|build|dist)/'

[tool.ruff]
line-length = 88
target-version = 'py313'

[tool.ruff.lint]
select = [
    'E', 'W',      # pycodestyle
    'F',           # Pyflakes
    'I',           # isort
    'N',           # pep8-naming
    'UP',          # pyupgrade
    'B',           # flake8-bugbear
    'A',           # flake8-builtins
    'C4',          # flake8-comprehensions
    'PIE',         # flake8-pie
    'PT',          # flake8-pytest-style
    'RET',         # flake8-return
    'SIM',         # flake8-simplify
    'PTH',         # flake8-use-pathlib
    'RUF',         # Ruff-specific rules
]
ignore = [
    'E501',        # line too long (handled by black)
    'D100', 'D104',   # missing docstrings
    'PLR0913',     # too many arguments
    'PLR0911',     # too many return statements
    'PLR0912',     # too many branches
    'PLR0915',     # too many statements
    'ERA001',      # commented-out code
]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["D"]
"tests/*" = ["S101", "PLR2004"]
"examples/*" = ["T201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poetry]
packages = [{include = "alpha_new", from = "src"}]

[project]
name = "alpha-new"
version = "0.1.0"
description = "Alpha交易系统 - 专业的币安Alpha交易平台工具，支持自动化交易、资产管理、API集成等功能。"
authors = [
    {name = "JustinShi", email = "2223060161@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs>=2.6.1,<3.0.0",
    "aiohttp>=3.12.14,<4.0.0",
    "aiohttp_socks>=0.10.1,<0.11.0",
    "aiosignal>=1.4.0,<2.0.0",
    "annotated-types>=0.7.0,<0.8.0",
    "anyio>=4.9.0,<5.0.0",
    "attrs>=25.3.0,<26.0.0",
    "blinker>=1.9.0,<2.0.0",
    "Brotli>=1.1.0,<2.0.0",
    "certifi>=2025.4.26,<2026.0.0",
    "cffi>=1.17.1,<2.0.0",
    "charset-normalizer>=3.4.2,<4.0.0",
    "colorama>=0.4.6,<0.5.0",
    "cryptography>=45.0.5,<46.0.0",
    "et_xmlfile>=2.0.0,<3.0.0",
    "frozenlist>=1.7.0,<2.0.0",
    "h11>=0.16.0,<0.17.0",
    "h2>=4.2.0,<5.0.0",
    "hpack>=4.1.0,<5.0.0",
    "httpcore>=1.0.9,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "hyperframe>=6.1.0,<7.0.0",
    "idna>=3.10,<4.0.0",
    "iniconfig>=2.1.0,<3.0.0",
    "kaitaistruct>=0.10,<0.11.0",
    "markdown-it-py>=3.0.0,<4.0.0",
    "mdurl>=0.1.2,<0.2.0",
    "multidict>=6.6.3,<7.0.0",
    "orjson>=3.10.18,<4.0.0",
    "outcome>=1.3.0.post0,<2.0.0",
    "packaging>=23.2,<24.0.0",
    "pluggy>=1.6.0,<2.0.0",
    "propcache>=0.3.2,<0.4.0",
    "pyasn1>=0.6.1,<0.7.0",
    "pycparser>=2.22,<3.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic_core>=2.33.2,<3.0.0",
    "pydivert>=2.1.0,<3.0.0",
    "Pygments>=2.19.2,<3.0.0",
    "pyOpenSSL>=25.1.0,<26.0.0",
    "pyparsing>=3.2.3,<4.0.0",
    "PySocks>=1.7.1,<2.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "python-socks>=2.7.1,<3.0.0",
    "pytz>=2025.2,<2026.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "rich>=14.0.0,<15.0.0",
    "setuptools>=69.0.3,<70.0.0",
    "six>=1.17.0,<2.0.0",
    "sniffio>=1.3.1,<2.0.0",
    "sortedcontainers>=2.4.0,<3.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "trio>=0.30.0,<1.0.0",
    "trio-websocket>=0.12.2,<0.13.0",
    "typing-inspection>=0.4.1,<0.5.0",
    "typing_extensions>=4.13.2,<5.0.0",
    "tzdata>=2025.2,<2026.0.0",
    "urllib3>=2.4.0,<3.0.0",
    "websocket-client>=1.8.0,<2.0.0",
    "websockets>=15.0.1,<16.0.0",
    "wsproto>=1.2.0,<2.0.0",
    "yarl>=1.20.1,<2.0.0",
    "zstandard>=0.23.0,<1.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "typer (>=0.16.0,<0.17.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "toml (>=0.10.2,<0.11.0)",
    "alembic (>=1.16.4,<2.0.0)"
]

[project.scripts]
alpha-new = "src.alpha_new.cli:main"
alpha-token = "src.examples.alpha_token_example:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "mypy>=1.10.0,<2.0.0",
    "black>=24.4.2,<25.0.0",
    "ruff>=0.4.4,<1.0.0",
    "pre-commit>=4.2.0,<5.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
